trunk/Archive2/de/93270417a0b7c4/output
main.cpp: In function 'int main()':
main.cpp:19:5: error: 'vector' is not a member of 'std'
     std::vector<pnt> v;
     ^
main.cpp:19:20: error: expected primary-expression before '>' token
     std::vector<pnt> v;
                    ^
main.cpp:19:22: error: 'v' was not declared in this scope
     std::vector<pnt> v;
                      ^
